test/fail/type_res23.v3
//@seman
// TODO: test fails due to separate variable and type scopes
def T: bool;
def m<T>(a: int) -> T {
	return T.!(a); // should resolve to type parameter T, not def T
}
